<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmovies.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgd"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/default_title"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <ImageView
                android:id="@+id/poster_imgview"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:paddingBottom="@dimen/fab_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/fab_margin"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/releasedt_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_release_date"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rating_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/default_rating"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/synopsis_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/default_synopsis"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@android:color/black" />
    </LinearLayout>

</ScrollView>
